--- a/example/local_config.example.json
+++ b/example/local_config.example.json
@@ -10,6 +10,7 @@
 	"udp_socket_max_idle_time": 60,
 	"log_level": "info",
 	"crypto_libpath": "/usr/lib/libcrypto.so.1.1",
+	"iv_len": 32,
 	"udp_iv_change_rate": 0.001,
 	"udp_multi_remote": {"192.168.122.164": 6050, "192.168.122.23": 6050},
 	"udp_multi_transmit_times": 1,
