--- a/example/local_config.example.json
+++ b/example/local_config.example.json
@@ -9,10 +9,13 @@
 	"passwd": "An indescribable password",
 	"udp_socket_max_idle_time": 60,
 	"log_level": "info",
+	"log_file": {"tcp": "/tmp/ir-tcp.log",
+				 "udp": "/tmp/ir-udp.log"},
 	"crypto_libpath": "/usr/lib/libcrypto.so.1.1",
 	"iv_len": 32,
 	"udp_iv_change_rate": 0.001,
-	"udp_multi_remote": {"192.168.122.164": 6050, "192.168.122.23": 6050},
+	"udp_multi_remote": {"192.168.122.164": 6050,
+						 "192.168.122.23": 6050},
 	"udp_multi_transmit_times": 1,
 	"udp_multi_transmit_max_packet_serial": 32768,
 	"udp_min_salt_len": 4,
