--- a/example/remote_config.example.json
+++ b/example/remote_config.example.json
@@ -6,8 +6,11 @@
 	"passwd": "An indescribable password",
 	"udp_socket_max_idle_time": 60,
 	"log_level": "info",
+	"log_file": {"tcp": "/tmp/ir-tcp.log",
+				 "udp": "/tmp/ir-udp.log"},
 	"crypto_libpath": "/usr/local/lib64/libcrypto.so.1.1",
-	"udp_multi_source": ["192.168.122.171", "192.168.122.23"],
+	"udp_multi_source": ["192.168.122.171",
+						 "192.168.122.23"],
 	"udp_multi_transmit_times": 1,
 	"udp_multi_transmit_max_packet_serial": 32768,
 	"udp_min_salt_len": 4,
