--- a/example/tou_local_config.example.json
+++ b/example/tou_local_config.example.json
@@ -1,11 +1,12 @@
 {
 	"remote_addr": "192.168.122.164",
 	"remote_tcp_port": 6040,
-	"remote_udp_port": 6050,
+	"tou_remote_udp_port": 6060,
 
 	"listen_addr": "127.0.0.1",
 	"listen_tcp_port": 60040,
 	"listen_udp_port": 60050,
+	"tou_listen_udp_port": 60060,
 
 	"iv_len": 32,
 	"cipher_name": "aes-256-gcm",
