--- a/example/tou_local_config.example.json
+++ b/example/tou_local_config.example.json
@@ -14,7 +14,9 @@
 	"udp_socket_max_idle_time": 60,
 	"log_level": "info",
 	"log_file": {"tcp": "/tmp/ir-tcp.log",
-				 "udp": "/tmp/ir-udp.log"},
+				 "udp": "/tmp/ir-udp.log",
+				 "tou_tcp": "/tmp/ir-tou-tcp.log",
+				 "tou_udp": "/tmp/ir-tou-udp.log"},
 	"crypto_libpath": "/usr/lib/libcrypto.so.1.1",
 
 	"udp_multi_remote": {"192.168.122.164": 6050,
